--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <body class="min-h-screen flex flex-col">
     <!-- Navbar -->
     <nav class="bg-[#293e48] text-white py-4 px-8 flex justify-between items-center sticky top-0 z-10">
-        <div class="text-xl font-semibold">My Portfolio</div>
+        <div class="text-xl font-semibold">Portfolio</div>
         <div>
             <a href="#about" class="ml-6 hover:text-[#323330]">About</a>
             <a href="works.html" class="ml-6 hover:text-[#323330]">Works</a>
@@ -139,15 +139,15 @@
 <section id="hero" class="text-center py-20 px-6 flex flex-col md:flex-row items-center justify-between">
     <!-- Left Content: Name and Description -->
     <div class="md:w-1/2 text-left">
-        <h1 class="text-4xl font-bold mb-4">Hello, I'm Houng Lymeng</h1>
+        <h1 class="text-4xl font-bold mb-4">Houng Lymeng</h1>
         <p class="text-lg mb-2 font-semibold">Open Work!</p>
         <p class="text-lg mb-6"></p>
         <a href="#projects" class="btn-primary px-6 py-2 rounded-full transition-all">See Projects</a>
     </div>
 
     <!-- Right Content: Image -->
-    <div class="md:w-1/2 flex justify-center">
-        <img class="w-40 h-60 object-cover" src="cv.JPG" alt="Profile Picture">
+    <div class="md:w-1/2 flex justify-center mt-8 md:mt-0">
+        <img class="w-32 sm:w-40 h-48 sm:h-60 object-cover" src="cv.JPG" alt="Profile Picture">
     </div>
 </section>
 
