--- a/index.html
+++ b/index.html
@@ -210,46 +210,60 @@
             </div>
         </section>
 
-        <!-- Projects Section -->
-        <section id="projects" class="py-20 px-6 bg-[#293e48] text-white">
-            <h2 class="text-3xl font-bold text-center mb-6 bg-[#293e48] text-white">My Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+<!-- Projects Section -->
+<section id="projects" class="py-20 px-6 bg-[#293e48] text-white">
+    <h2 class="text-3xl font-bold text-center mb-10">My Projects</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Project Card 1: Food Ordering System -->
-        <a href="https://www.linkedin.com/posts/houng-lymeng168_webdevelopment-cloudtechnology-healthyfood-activity-7224088899961204736-jXpR?utm_source=share&utm_medium=member_desktop" target="_blank" class="card p-6">
-            <div class="flex items-center mb-2">
-                <img src="bowl1.jpg" alt="Food Ordering System Icon" class="w-8 h-8 rounded-full mr-2"> <!-- Circular image next to the title -->
-                <h3 class="text-xl font-semibold">Food Ordering System (Web and Cloud)</h3>
+        <a href="https://www.linkedin.com/posts/houng-lymeng168_webdevelopment-cloudtechnology-healthyfood-activity-7224088899961204736-jXpR?utm_source=share&utm_medium=member_desktop" target="_blank" class="card bg-white text-[#293e48] rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
+            <div class="relative overflow-hidden rounded-t-lg">
+                <img src="bowl1.jpg" alt="Food Ordering System" class="w-full h-40 object-cover">
             </div>
-            <p><strong>Role:</strong> Schedule Management and Coding</p>
-            <p><strong>Tech:</strong> HTML, CSS, JavaScript, Laravel, MySQL</p>
-            <p>Developed user roles, CRUD operations, login/registration (email & social login), order placement, and an Admin dashboard with revenue reports and order trends analysis.</p>
-            <i class="fas fa-video text-2xl mt-2"></i> <!-- Video icon to indicate external media -->
+            <div class="p-6">
+                <h3 class="text-2xl font-semibold mb-2">Food Ordering System (Web and Cloud)</h3>
+                <p class="text-sm mb-4"><strong>Role:</strong> Schedule Management and Coding</p>
+                <p class="text-sm mb-4"><strong>Tech:</strong> HTML, CSS, JavaScript, Laravel, MySQL</p>
+                <p class="text-sm mb-4">Developed user roles, CRUD operations, login/registration (email & social login), order placement, and an Admin dashboard with revenue reports and order trends analysis.</p>
+                <div class="flex items-center">
+                    <i class="fas fa-video text-xl mr-2"></i>
+                    <span class="text-sm">Watch Demo</span>
+                </div>
+            </div>
         </a>
 
         <!-- Project Card 2: 3D Teapot -->
-        <a href="https://drive.google.com/file/d/1g-flmwDoNPA8ppfYH56sFJySQAcR-gYN/view?usp=drive_link" target="_blank" class="card p-6">
-            <div class="flex items-center mb-2">
-                <img src="teapot.png" alt="3D Teapot Icon" class="w-8 h-8 rounded-full mr-2"> <!-- Circular image next to the title -->
-                <h3 class="text-xl font-semibold">3D Teapot (Computer Graphics Project)</h3>
+        <a href="https://drive.google.com/file/d/1g-flmwDoNPA8ppfYH56sFJySQAcR-gYN/view?usp=drive_link" target="_blank" class="card bg-white text-[#293e48] rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
+            <div class="relative overflow-hidden rounded-t-lg">
+                <img src="teapot.png" alt="3D Teapot" class="w-full h-40 object-cover">
             </div>
-            <p><strong>Role:</strong> Developer, Project Lead</p>
-            <p><strong>Tech:</strong> C++, OpenGL</p>
-            <p>Created 3D animations and transformations for static objects with color buffer implementation.</p>
-            <i class="fas fa-video text-2xl mt-2"></i> <!-- Video icon to indicate external media -->
+            <div class="p-6">
+                <h3 class="text-2xl font-semibold mb-2">3D Teapot (Computer Graphics Project)</h3>
+                <p class="text-sm mb-4"><strong>Role:</strong> Developer, Project Lead</p>
+                <p class="text-sm mb-4"><strong>Tech:</strong> C++, OpenGL</p>
+                <p class="text-sm mb-4">Created 3D animations and transformations for static objects with color buffer implementation.</p>
+                <div class="flex items-center">
+                    <i class="fas fa-video text-xl mr-2"></i>
+                    <span class="text-sm">Watch Demo</span>
+                </div>
+            </div>
         </a>
 
         <!-- Project Card 3: News App -->
-        <a href="https://www.linkedin.com/posts/houng-lymeng168_mobiledevelopment-appdevelopment-newsapp-activity-7224425741608796161-dWGR?utm_source=share&utm_medium=member_desktop" target="_blank" class="card p-6">
-            <div class="flex items-center mb-2">
-                <img src="mobile.png" alt="News App Icon" class="w-8 h-8 rounded-full mr-2"> <!-- Circular image next to the title -->
-                <h3 class="text-xl font-semibold">News App (Mobile Application)</h3>
+        <a href="https://www.linkedin.com/posts/houng-lymeng168_mobiledevelopment-appdevelopment-newsapp-activity-7224425741608796161-dWGR?utm_source=share&utm_medium=member_desktop" target="_blank" class="card bg-white text-[#293e48] rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300">
+            <div class="relative overflow-hidden rounded-t-lg">
+                <img src="mobile.png" alt="News App" class="w-full h-40 object-cover">
             </div>
-            <p><strong>Role:</strong> Mobile Developer and Meeting Management</p>
-            <p><strong>Tech:</strong> Java</p>
-            <p>Developed a news app connected to NewsAPI.org for instant and reliable updates.</p>
-            <i class="fas fa-video text-2xl mt-2"></i> <!-- Video icon to indicate external media -->
+            <div class="p-6">
+                <h3 class="text-2xl font-semibold mb-2">News App (Mobile Application)</h3>
+                <p class="text-sm mb-4"><strong>Role:</strong> Mobile Developer and Meeting Management</p>
+                <p class="text-sm mb-4"><strong>Tech:</strong> Java</p>
+                <p class="text-sm mb-4">Developed a news app connected to NewsAPI.org for instant and reliable updates.</p>
+                <div class="flex items-center">
+                    <i class="fas fa-video text-xl mr-2"></i>
+                    <span class="text-sm">Watch Demo</span>
+                </div>
+            </div>
         </a>
-
     </div>
 </section>
 
