--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
     <!-- Resume Section -->
     <section class="text-center py-20 px-6">
         <h1 class="text-4xl font-bold mb-4">Resume</h1>
-        <p class="text-lg mb-6">Here is a quick overview of my skills, experience, and education.</p>
+        <p class="text-lg mb-6">Here is my overview of my skills, experience, and education.</p>
         
         <!-- Profile Image and Info -->
         <div class="max-w-4xl mx-auto text-left flex flex-col md:flex-row items-center mb-6">
