--- a/index.html
+++ b/index.html
@@ -123,33 +123,34 @@
 </head>
 
 <body class="min-h-screen flex flex-col">
-    <!-- Navbar -->
-    <nav class="bg-[#293e48] text-white py-4 px-4 sm:px-8 flex justify-between items-center sticky top-0 z-10">
-        <div class="text-xl font-semibold">Portfolio</div>
-        <div class="hidden md:flex">
-            <a href="#about" class="ml-4 sm:ml-6 hover:text-[#323330]">About</a>
-            <a href="works.html" class="ml-4 sm:ml-6 hover:text-[#323330]">Works</a>
-            <a href="#projects" class="ml-4 sm:ml-6 hover:text-[#323330]">Projects</a>
-            <a href="resume.html" class="ml-4 sm:ml-6 hover:text-[#323330]">Resume</a>
-            <a href="#contact" class="ml-4 sm:ml-6 hover:text-[#323330]">Contact</a>
-        </div>
-        <!-- Mobile menu button -->
-        <div class="md:hidden">
-            <button id="menu-toggle" class="focus:outline-none">
-                <!-- Add an icon here for the menu (e.g., using Font Awesome) -->
-                ☰
-            </button>
-        </div>
-    </nav>
 
-    <!-- Mobile Menu (hidden by default) -->
-    <div id="mobile-menu" class="bg-[#293e48] text-white py-4 px-4 flex flex-col items-start space-y-4 hidden">
-        <a href="#about" class="hover:text-[#323330]">About</a>
-        <a href="works.html" class="hover:text-[#323330]">Works</a>
-        <a href="#projects" class="hover:text-[#323330]">Projects</a>
-        <a href="resume.html" class="hover:text-[#323330]">Resume</a>
-        <a href="#contact" class="hover:text-[#323330]">Contact</a>
-    </div>
+            <!-- Navbar -->
+        <nav class="bg-[#293e48] text-white py-4 px-4 sm:px-8 flex justify-between items-center sticky top-0 z-10">
+            <div class="text-xl font-semibold">Portfolio</div>
+            <div class="hidden md:flex">
+                <a href="#about" class="ml-4 sm:ml-6 hover:text-[#323330]">About</a>
+                <a href="works.html" class="ml-4 sm:ml-6 hover:text-[#323330]">Works</a>
+                <a href="#projects" class="ml-4 sm:ml-6 hover:text-[#323330]">Projects</a>
+                <a href="resume.html" class="ml-4 sm:ml-6 hover:text-[#323330]">Resume</a>
+                <a href="#contact" class="ml-4 sm:ml-6 hover:text-[#323330]">Contact</a>
+            </div>
+            <!-- Mobile menu button -->
+            <div class="md:hidden">
+                <button id="menu-toggle" class="focus:outline-none">
+                    ☰
+                </button>
+            </div>
+        </nav>
+
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden bg-[#293e48] text-white py-4">
+            <a href="#about" class="block px-4 py-2 hover:text-[#323330]">About</a>
+            <a href="works.html" class="block px-4 py-2 hover:text-[#323330]">Works</a>
+            <a href="#projects" class="block px-4 py-2 hover:text-[#323330]">Projects</a>
+            <a href="resume.html" class="block px-4 py-2 hover:text-[#323330]">Resume</a>
+            <a href="#contact" class="block px-4 py-2 hover:text-[#323330]">Contact</a>
+        </div>
+
 
     <!-- Hero Section -->
     <section id="hero" class="text-center py-16 px-4 sm:py-20 sm:px-6 flex flex-col items-center md:flex-row md:justify-between">
