--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
         <div class="max-w-4xl mx-auto text-left">
             <!-- Objective Section -->
             <h2 class="text-3xl font-bold mb-4">Objective</h2>
-            <p class="mb-4">I am an IT Engineering student at the Royal University of Phnom Penh with experience in software development, mobile apps, and digital marketing. I worked in front-of-house and reporting at Backyard Café, where I also trained staff on POS systems for new features. I am passionate about using my IT and marketing skills to solve problems and improve operations.</p>
+            <p class="mb-4">I am an IT Engineering student at the Royal University of Phnom Penh with hands-on experience in software development, mobile application development, and digital marketing. As a Front-of-House Supervisor at Backyard Café, I managed daily reports, trained staff on new POS features, and ensured exceptional customer service. Proficient in HTML, CSS, Laravel, and JavaScript, I am passionate about leveraging my IT and marketing skills to identify and solve problems, streamline operations, and enhance user experiences.</p>
             
             <!-- Education Section -->
             <h2 class="text-3xl font-bold mb-4">Education</h2>
@@ -91,21 +91,30 @@
                 <li>Self-Management</li>
             </ul>
 
-            <!-- Work Experience Section -->
+                    <!-- Work Experience Section -->
             <h2 class="text-3xl font-bold mb-4">Work Experience</h2>
             <div class="mb-6">
-                <h3 class="text-xl font-semibold">FOH at Backyard Café (February 2022 - 2024)</h3>
+                <h3 class="text-xl font-semibold">FOH | Backyard Café (February 2022)</h3>
                 <ul class="list-disc ml-8 mb-4">
-                    <li>Processed payments and issued receipts.</li>
+                    <li>Provided fast, friendly, and accurate customer service.</li>
                     <li>Prepared daily reports using Excel and Google Sheets.</li>
-                    <li>Delivered friendly customer service, including taking orders and addressing inquiries.</li>
                     <li>Resolved customer complaints efficiently.</li>
-                    <li>Trained new staff on POS features and usage, including demonstrations and presentations.</li>
-                    <li>Delivered clear information on new POS functionalities and system updates.</li>
-                    <li>Collected and acted on customer feedback via Google Forms to enhance service quality.</li>
                     <li>Shared product knowledge with customers.</li>
                 </ul>
             </div>
+            <div class="mb-6">
+                <h3 class="text-xl font-semibold">FOH Supervisor | Backyard Café (October 2022 - 2024)</h3>
+                <ul class="list-disc ml-8 mb-4">
+                    <li>Ensured team provided fast, friendly, and accurate service.</li>
+                    <li>Managed ordering of soft beverages, cashing up after service, and printing menus.</li>
+                    <li>Managed orders for soft drinks and supplies.</li>
+                    <li>Made weekly deposits to the CEO’s bank account.</li>
+                    <li>Surveyed customers for feedback using Google Forms to improve service quality.</li>
+                    <li>Managed and monitored guest reservations.</li>
+                    <li>Trained new staff on POS features, functionalities, and system updates.</li>
+                </ul>
+            </div>
+
 
             <!-- IT Projects Section -->
             <h2 class="text-3xl font-bold mb-4">IT Projects</h2>
