--- a/works.html
+++ b/works.html
@@ -30,25 +30,44 @@
         
         <div class="max-w-4xl mx-auto">
             <!-- Backyard Café Card -->
-            <div class="card bg-white shadow-md rounded-lg p-6 mb-8">
-                <div class="flex items-center mb-4">
-                    <img src="backyard_n.png" alt="Backyard Café Logo" class="w-16 h-16 rounded-full mr-4"> <!-- Circular logo -->
-                    <div>
-                        <h3 class="text-2xl font-semibold">Front-of-House (FOH) at Backyard Café</h3>
-                        <p class="text-gray-600">February 2022 - 2024</p>
-                    </div>
-                </div>
-                <ul class="list-disc pl-5">
-                    <li>Processed payments and issued receipts.</li>
-                    <li>Prepared daily reports using Excel and Google Sheets.</li>
-                    <li>Delivered friendly customer service, including taking orders and addressing inquiries.</li>
-                    <li>Resolved customer complaints efficiently.</li>
-                    <li>Trained new staff on POS features and usage, including demonstrations and presentations.</li>
-                    <li>Delivered clear information on new POS functionalities and system updates.</li>
-                    <li>Collected and acted on customer feedback via Google Forms to enhance service quality.</li>
-                    <li>Shared product knowledge with customers.</li>
-                </ul>
-            </div>
+
+<!-- Backyard Café Card -->
+<div class="card bg-white shadow-lg rounded-lg p-6 mb-8 transition-transform duration-300 hover:shadow-xl hover:scale-105">
+    <div class="flex items-center mb-4">
+        <img src="backyard_n.png" alt="Backyard Café Logo" class="w-16 h-16 rounded-full border-2 border-[#014164] mr-4"> <!-- Circular logo with border -->
+        <div>
+            <h3 class="text-2xl font-semibold text-[#014164]">Backyard Café</h3> <!-- Company Name -->
+        </div>
+    </div>
+
+    <div class="flex items-center mb-4">
+        <h4 class="text-lg font-semibold text-[#014164]">Front-of-House (FOH)</h4>
+        <p class="text-gray-600 italic ml-2">(February 2022)</p>
+    </div>
+    <h4 class="text-lg font-semibold text-[#323330] border-b-2 border-[#014164] mb-2">Key Responsibilities:</h4>
+    <ul class="list-disc pl-5 mb-4 text-gray-800">
+        <li>Provided fast, kind, and accurate customer service.</li>
+        <li>Prepared daily reports using Excel and Google Sheets.</li>
+        <li>Resolved customer complaints efficiently.</li>
+        <li>Shared product knowledge with customers.</li>
+    </ul>
+
+    <div class="flex items-center mb-4">
+        <h4 class="text-lg font-semibold text-[#014164]">FOH Supervisor</h4>
+        <p class="text-gray-600 italic ml-2">(October 2022 - 2024)</p>
+    </div>
+    
+    <h4 class="text-lg font-semibold text-[#323330] border-b-2 border-[#014164] mb-2">Responsibilities:</h4>
+    <ul class="list-disc pl-5 text-gray-800">
+        <li>Ensured the team delivers fast, friendly, and accurate service.</li>
+        <li>Managed ordering of soft beverages and cash handling after service.</li>
+        <li>Handled printing of menus and managing orders for supplies.</li>
+        <li>Conducted weekly deposits to the CEO’s bank account.</li>
+        <li>Surveyed customers for feedback using Google Forms to improve service quality.</li>
+        <li>Managed and monitored guest reservations.</li>
+        <li>Trained new staff on POS features and system updates.</li>
+    </ul>
+</div>
 
             <!-- Default Work Experience Card -->
 
