--- a/works.html
+++ b/works.html
@@ -44,7 +44,7 @@
                 <h4 class="text-lg font-semibold text-[#014164]">Front-of-House (FOH)</h4>
                 <p class="text-gray-600 italic ml-2">(February 2022)</p>
             </div>
-            <h4 class="text-lg font-semibold text-[#323330] border-b-2 border-[#014164] mb-2">Key Responsibilities:</h4>
+            <h4 class="text-lg font-semibold text-[#323330] border-b-2 border-[#014164] mb-2">Responsibilities:</h4>
             <ul class="list-disc pl-5 mb-4 text-gray-800">
                 <li>Provided fast, kind, and accurate customer service.</li>
                 <li>Prepared daily reports using Excel and Google Sheets.</li>
