--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,8 @@
             <img src="cv.JPG" alt="Your Profile Picture" class="profile-img mr-6"> <!-- Profile Image -->
             <div>
                 <p><strong>Name:</strong> Houng Lymeng</p>
-                <p><strong>Email:</strong> houng.lymeng.2821@rupp.edu.kh</p>
+                <p><strong>Email:</strong> <a href="hounglymeng160923@gmail.com" target="_blank">hounglymeng160923@gmail.com</a></p>
+                
                 <p><strong>Phone:</strong> +855 68 500 601</p>
                 <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/houng-lymeng168" target="_blank">linkedin.com/in/houng-lymeng168</a></p>
             </div>
@@ -72,14 +73,15 @@
             <!-- Languages Section -->
             <h2 class="text-3xl font-bold mb-4">Languages</h2>
             <p class="mb-4"><strong>Khmer:</strong> Mother Tongue</p>
-            <p class="mb-4"><strong>English:</strong> Intermediate</p>
+            <p class="mb-4"><strong>English</strong></p>
 
             <!-- Skills Section -->
             <h2 class="text-3xl font-bold mb-4">Skills</h2>
             <h3 class="font-semibold mb-2">Technical Skills:</h3>
             <ul class="list-disc ml-8 mb-4">
                 <li>Software Tools: Excel, Google Sheets, WordPress</li>
-                <li>Web Development: HTML, CSS, JavaScript, Laravel</li>
+                <li>Frontend Development: HTML, CSS, JavaScript</li>
+                <li>Backend Development: Laravel, MySQL</li>
                 <li>Mobile Development: Kotlin, Java</li>
             </ul>
             <h3 class="font-semibold mb-2">Soft Skills:</h3>
