--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                     <h3 class="text-2xl font-semibold mb-4">Technical Skills</h3>
                     <ul class="list-disc pl-6">
                         <li>Software Tools: Excel, Google Sheets, WordPress</li>
-                        <li>Web Development: HTML, CSS, JavaScript, Laravel</li>
+                        <li>Frontend Development: HTML, CSS, JavaScript</li>
+                        <li>Backend Development: Laravel, MySQL</li>
                         <li>Mobile Development: Kotlin, Java</li>
                         <!-- Add more technical skills as needed -->
                     </ul>
