--- a/resume.html
+++ b/resume.html
@@ -139,13 +139,16 @@
 
             <!-- Completed Course Section -->
             <h2 class="text-3xl font-bold mb-4">Completed Course</h2>
-            <p class="mb-4"><strong>Digital Marketing Certification</strong> | Udemy (2024)</p>
+            <p class="mb-4"><strong>Digital Marketing Certification</strong> 
+                | <a href="https://drive.google.com/file/d/1qRpMAiz0ie3ugRA2n8Sp7_wCtarku9_6/view?usp=drive_links" target="_blank" class="text-[#014164] no-underline hover:underline hover:text-[#323330]">Udemy (2024)</a>
+            </p>
             <ul class="list-disc ml-8 mb-4">
                 <li>Learned key skills in SEO, email marketing, and Google Analytics.</li>
                 <li>Gained experience with Google Ads, YouTube Ads, and social media marketing (Facebook, Instagram, LinkedIn).</li>
                 <li>Studied digital marketing strategy, branding, and content marketing.</li>
                 <li>Trained in freelancing and WordPress for website creation.</li>
             </ul>
+
 
             <!-- Resume Download -->
             <a href="#https://www.canva.com/design/DAFze932EU4/CbF6dPvv-tMtYS1qjCCAJg/edit?utm_content=DAFze932EU4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn-primary px-6 py-2 rounded-full inline-block mt-6">Download Full Resume</a>
