allow for the view cv

--- a/resume.html
+++ b/resume.html
@@ -150,7 +150,7 @@
             </ul>
 
             <!-- Resume Download -->
-            <a href="#https://www.canva.com/design/DAFze932EU4/CbF6dPvv-tMtYS1qjCCAJg/edit?utm_content=DAFze932EU4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn-primary px-6 py-2 rounded-full inline-block mt-6">Download Full Resume</a>
+            <a href="https://drive.google.com/file/d/1uFcRS37gKRJx85VPjCJrEVgKPArBvAk7/view?usp=sharing" class="btn-primary px-6 py-2 rounded-full inline-block mt-6">Download Full Resume</a>
         </div>
     </section>
 
