--- a/resume.html
+++ b/resume.html
@@ -142,13 +142,22 @@
             <!-- Completed Course Section -->
             <h2 class="text-3xl font-bold mb-4">Completed Course</h2>
             <p class="mb-4"><strong>Digital Marketing Certification</strong> 
-                | <a href="https://drive.google.com/file/d/1qRpMAiz0ie3ugRA2n8Sp7_wCtarku9_6/view?usp=drive_links" target="_blank" class="text-[#014164] no-underline hover:underline hover:text-[#323330]">Udemy (2024)</a>
+                | <a href="https://www.udemy.com/certificate/UC-dd983134-c600-4d14-8910-ce28d698cd61/" target="_blank" class="text-[#014164] no-underline hover:underline hover:text-[#323330]">Udemy (2024)</a>
             </p>
             <ul class="list-disc ml-8 mb-4">
                 <li>Learned key skills in SEO, email marketing, and Google Analytics.</li>
-                <li>Gained experience with Google Ads, YouTube Ads, and social media marketing (Facebook, Instagram, LinkedIn).</li>
+                <li>Gained experience with Social media marketing (Facebook, Telegram, TikTok, Instagram, LinkedIn).</li>
                 <li>Studied digital marketing strategy, branding, and content marketing.</li>
                 <li>Trained in freelancing and WordPress for website creation.</li>
+            </ul>
+
+            <p class="mb-4"><strong>Team Lead & Digital Marketing Project</strong> 
+                | <a href="##" target="_blank" class="text-[#014164] no-underline hover:underline hover:text-[#323330]">CheckinMe Scholarship Program</a>
+            </p>
+            <ul class="list-disc ml-8 mb-4">
+                <li>Leading a team: I learned how to manage a team and guide them towards a common goal.</li>
+                <li>Project management: I learned how to plan and execute a project successfully.</li>
+                <li>Digital marketing: I gained valuable experience in creating and promoting digital content.</li>
             </ul>
 
 
@@ -159,7 +168,7 @@
 
     <!-- Footer -->
     <footer class="bg-[#293e48] text-white py-4 text-center">
-        <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
+        <p>&copy; My Portfolio. All Rights Reserved.</p>
     </footer>
 </body>
 
