--- a/resume.html
+++ b/resume.html
@@ -168,7 +168,7 @@
 
     <!-- Footer -->
     <footer class="bg-[#293e48] text-white py-4 text-center">
-        <p>&copy; My Portfolio. All Rights Reserved.</p>
+        <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
     </footer>
 </body>
 
