--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <h1 class="text-3xl sm:text-4xl font-bold mb-4">Houng Lymeng</h1>
             <p class="text-lg mb-2 font-semibold">Open to Opportunities</p>
             <p class="text-sm mb-6">
-                I am an IT Engineering student at the Royal University of Phnom Penh with a solid understanding of programming languages and software development. I have worked on web and mobile app projects for my lectures, and I am always looking to improve my skills in digital marketing and project management. A passionate developer specializing in web and mobile development. Let's create something amazing together!
+                I am an  IT Engineering student at the Royal University of Phnom Penh. Digital Marketing Executive at Keepo Cambodia, creating content, managing events, and assisting with hiring. Former FOH Supervisor at Backyard Café, improving customer service and staff training. Completed a Digital Marketing course on Udemy and led a digital marketing project for the CheckinMe Scholarship Program. Passionate about using technology to solve problems and work in dynamic teams. Let's create something amazing together!
             </p>            
             <a href="#projects" class="inline-block btn-primary px-6 py-2 rounded-full transition-all">See Projects</a>
         </div>
