--- a/resume.html
+++ b/resume.html
@@ -224,7 +224,7 @@
 </div>
 
             <!-- Resume Download -->
-            <a href="https://drive.google.com/file/d/1nG3PrOPGmXliamV7WWbCtjWcAjWBsPnX/view?usp=sharing" class="btn-primary px-6 py-2 rounded-full inline-block mt-6">Download Full Resume</a>
+            <a href="https://drive.google.com/file/d/1nG3PrOPGmXliamV7WWbCtjWcAjWBsPnX/view?usp=drive_link" class="btn-primary px-6 py-2 rounded-full inline-block mt-6">Download Full Resume</a>
         </div>
     </section>
 
